typeahead fix for close button on ie11

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -292,7 +292,7 @@
 }.uikit-refactor .main{display:flex}.uikit-refactor .block{flex-grow:1;flex-basis:50%;padding:0 30px}
 .uikit-refactor .selected-option{margin-bottom:20px}.uikit-refactor .s-typeahead-wrapper{position:relative;width:100%}
 .uikit-refactor .s-typeahead-wrapper input:focus{background:url(../images/ico-close-gray.svg) no-repeat 715px center;background-size:30px 30px}
-.uikit-refactor .s-typeahead-input{z-index:1}.uikit-refactor .s-typeahead-input::-ms-clear{display:none}
+.uikit-refactor .s-typeahead-input{z-index:1}.uikit-refactor .s-typeahead-input::-ms-clear{width:0;height:0}
 .uikit-refactor .s-typeahead-list--wrapper{position:absolute;width:100%;z-index:5}
 .uikit-refactor .s-typeahead-list{width:100%;list-style:none;padding:0;margin:0;position:relative;top:-8px;box-sizing:border-box;list-style:none;background:#fff;border:1px solid #666;max-height:210px;max-width:755px;overflow-y:auto;overflow-x:hidden}
 .uikit-refactor .s-typeahead-list-item{width:100%;background-color:#fff;border-bottom:1px solid #e2e2e2;text-align:left;padding:8px}
