--- a/src/sass/myservice-autocomplete.scss
+++ b/src/sass/myservice-autocomplete.scss
@@ -39,7 +39,8 @@
 }
 
 .s-typeahead-input::-ms-clear {
-	display:none;
+	width:0px;
+	height:0px;
 }
 
 
